# repolish

./: .gitignore  CHANGELOG.md  README.md  TODO.md  TODO_hotlog.md  TODO_monorepo.md  codeguide.sh  coveragerc.toml  dprint.json  mise.toml  mkdocs.yaml  pkglink.config.yaml  poe_tasks.toml  project.env  pyproject.toml  repolish.yaml  ruff.toml  toolbelt.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/home/: bashrc.sh  prompt_settings.sh  python-env-settings.sh
.devcontainer/installers/: apt-get.sh  ohmybash.sh  python-tools.sh  python.sh  uv.sh  yq.sh
.devcontainer/scripts/: env_setup.sh
.github/: ai_patterns.md  build-publish.sh  copilot-instructions.md
.github/workflows/: ci-checks.yaml  ci-checks.yml
docs/: index.md  llms.md  llms.txt  wip.md
docs/cli/: apply.md  index.md  link.md  lint.md  preview.md  scaffold.md
docs/concepts/: context.md  file-modes.md  monorepo.md  overview.md  preprocessors.md  providers.md  templates.md
docs/configuration/: config-file.md  context.md  overview.md  providers.md
docs/developer-control/: anchors.md  context-overrides.md  index.md  pause.md
docs/getting-started/: context.md  installation.md  quick-start.md
docs/guides/: debugger.md  linker.md  mode-handler.md  monorepo.md  patterns.md  preprocessors.md  provider-migration.md  providers-monorepo.md  templates.md
docs/how-it-works/: context.md  file-modes.md  monorepo.md  overview.md  preprocessors.md  providers.md  templates.md
docs/operations/: cli.md
docs/project-controls/: anchors.md  context-overrides.md  local-providers.md  template-overrides.md
docs/provider-development/: config-file.md  context.md  linker.md  mode-handler.md  monorepo.md  overview.md  preprocessors.md  provider-migration.md  providers.md  templates.md  testing.md
docs/reference/: apply.md  index.md  lint.md  preview.md
docs/tutorial/: 01-workspace-provider.md  02-python-provider.md  03-keeping-in-sync.md  04-monorepo.md  05-using-all-providers.md  index.md
examples/: README.md  repolish.yaml
examples/preview-examples/: README.md  anchor_debug.yaml  multiregex_debug.yaml
examples/project/: Dockerfile  old_file.txt  pyproject.toml  repolish.yaml
examples/template_a/: Dockerfile  (+3 more)
provider-examples/: .gitignore  README.md
provider-examples/devkit/python/: README.md  pyproject.toml
provider-examples/devkit/python/devkit/python/: __init__.py
provider-examples/devkit/python/devkit/python/repolish/: __init__.py  models.py  provider.py
provider-examples/devkit/python/devkit/python/resources/templates/: repolish.py
provider-examples/devkit/python/devkit/python/resources/templates/repolish/: .gitkeep  _repolish._ci-checks.yaml.jinja
provider-examples/devkit/workspace/: README.md  pyproject.toml
provider-examples/devkit/workspace/devkit/workspace/: __init__.py
provider-examples/devkit/workspace/devkit/workspace/repolish/: __init__.py  linker.py  models.py  provider.py
provider-examples/devkit/workspace/devkit/workspace/resources/templates/: repolish.py
provider-examples/devkit/workspace/devkit/workspace/resources/templates/repolish/: .gitkeep  root_file.md.jinja
provider-examples/scaffold-provider/: pyproject.toml
provider-examples/scaffold-provider/scaffold_provider/: __init__.py  cli.py
provider-examples/scaffold-provider/scaffold_provider/resources/configs/: some-config.yaml
provider-examples/scaffold-provider/scaffold_provider/resources/templates/: repolish.py
provider-examples/scaffold-provider/scaffold_provider/resources/templates/repolish/: NOTICE.md.jinja  README.md  _repolish.config-a.yml  _repolish.config-b.yml  _repolish.optional-config.md  _repolish.setup.md
provider-examples/scaffold-provider/scaffold_provider/resources/templates/repolish/.github/workflows/: _repolish.ci-github.yml
provider-examples/simple-provider/: pyproject.toml
provider-examples/simple-provider/simple_provider/: __init__.py  cli.py
provider-examples/simple-provider/simple_provider/resources/templates/: repolish.py
provider-examples/simple-provider/simple_provider/resources/templates/repolish/: .gitkeep  README.simple-provider.md
repolish/: __init__.py  builder.py  cli.py  config.py  config_old.py  console.py  cookiecutter.py  debug_cli.py  link_cli.py  loader.py  misc.py  pkginfo.py  processors.py  utils.py  version.py
tests/: conftest.py  test_apply_and_unreadable.py  test_builder_extra.py  test_config.py  test_config_providers.py  test_cookiecutter.py  test_cookiecutter_extra.py  test_create_only_files.py  test_debug_cli.py  test_delete_conflicts.py  test_file_mappings.py  test_integration_cli.py  test_integration_debug_cli.py  test_line_endings.py  test_loader_context.py  test_loader_create_only.py  test_loader_deletes.py  test_loader_providers.py  test_pkginfo.py  test_post_process.py  test_processors.py  test_processors_ascii_art.py  test_processors_helpers.py  test_processors_whitespace_helper.py  test_providers.py  test_regex_anchor_insertion.py  test_utils_post_process.py
(+260 files in other folders)
