[project]
name = "repolish"
description = "Maintain consistency across repositories"
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
  "cyclopts>=4.8.0",
  "hotlog >= 0.2.0",
  "jinja2 == 3.1.6",
  "pydantic >= 2.0.0",
]

[project.scripts]
repolish = "repolish.cli.main:main"
repolish-debugger = "repolish.cli.standalone.preview_cli:app"
repolish-link = "repolish.cli.standalone.link_cli:app"

[dependency-groups]
dev = [
  "pytest >= 8.0.0",
  "pytest-mock >= 3.12.0",
  "pytest-cov >= 4.0.0",
]

[tool.hatch]
build.packages = ["repolish"]
metadata.allow-direct-references = true
version.path = 'repolish/version.py'

[tool]
pyright.extends = ".pkglink/.codeguide/configs/pyrightconfig.json"

[tool.releez]
create-pr = true
run-changelog-format = true
hooks = { changelog-format = ["mise", "exec", "--", "poe", "format-dprint", "{changelog}"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
