[project]
name = "simple-provider"
version = "0.1.0"
description = "Minimal test provider used by the repolish integration test suite"
requires-python = ">=3.11"
dependencies = ["repolish"]

[project.scripts]
simple-provider-link = "simple_provider.cli:main"

[tool.hatch]
build.packages = ["simple_provider"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
